# sarafun_assembly_simulation

./: README.md
planar_folding_assembly/: CMakeLists.txt  README.md  package.xml
planar_folding_assembly/launch/: planar_folding_assembly.launch  spawn_planar_folding_assembly_model.launch  spawn_receptacle.launch  spawn_slider.launch
planar_folding_assembly/src/: admittance_controller_base.h  empty_controller.cpp  planar_folding_admittance_controller.cpp  planar_folding_assembly_base_plugin.h  planar_folding_assembly_controller_plugin.cpp  sliding_admittance_controller.cpp  vertical_force_admittance_controller.cpp  vertical_force_controller.cpp
planar_folding_assembly/src/base/: admittance_controller_base.h  controller_base.h
planar_folding_assembly/urdf/: constants.urdf.xacro  planar_folding_assembly.urdf.xacro  receptacle.urdf.xacro  slider.urdf.xacro
planar_folding_assembly/urdf/controllers/: empty_controller.slider.urdf.xacro  planar_folding_admittance_controller.slider.urdf.xacro  sliding_admittance_controller.slider.urdf.xacro  vertical_force_admittance_controller.slider.urdf.xacro  vertical_force_controller.slider.urdf.xacro
planar_folding_assembly/worlds/: ingravid.world
