<?xml version="1.0"?>
<package>

  <name>planar_folding_assembly</name>
  <version>0.0.0</version>
  <description>The planar_folding_assembly package</description>

  <maintainer email="miguel.prada@tecnalia.com">mprada</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>gazebo</build_depend>

  <build_depend>geometry_msgs</build_depend>

  <run_depend>geometry_msgs</run_depend>

  <export>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
  </export>

</package>
